# confidential-sdk

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  rust.yml
examples/: confidential-transfer.ts
rust/: Cargo.toml  R1-FIX-PLAN.md  README.md
rust/src/: auditor.rs  keys.rs  lib.rs  operations.rs
rust/tests/: ct_integration.rs
scripts/: start-test-validator.sh
src/: applyPendingBalance.ts  auditor.ts  configureAccount.ts  decryptBalance.ts  deposit.ts  index.ts  keys.ts  transfer.ts
src/internal/: confidentialTransferArithmetic.ts  confidentialTransferProof.ts
test/: _helpers.ts  _patch-zk-sdk.cjs  applyPendingBalance.test.ts  auditor.test.ts  configureAccount.test.ts  deposit.test.ts  errors.test.ts  keys.test.ts  transfer.test.ts  unit.test.ts
workflows/: ci.yml
